--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.29'  // MySQL JDBC Driver
     implementation 'com.google.crypto.tink:tink:1.17.0'
     runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
+    implementation("net.java.dev.jna:jna:5.17.0")
 }
 
 javafx {
