--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/password.txt
+/src/main/resources/guestPassword.txt
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
