Update to version 5.0 Password Manger fully online Automatic update checker functional CSS completely done Ready for Dev Testing

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ jar {
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
+processResources {
+    filesMatching("version.properties") {
+        expand(project.properties)
+    }
+}
 
 dependencies {
     implementation 'org.openjfx:javafx-controls:21'
